compiler/LightParser.js
// Generated from D:/GitHub/X-16/compiler\Light.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LightListener = require('./LightListener').LightListener;
var grammarFileName = "Light.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'+'", "'-'", "'=='", "'!='", "'==='", "'!=='", 
                     "'&&'", "'||'", "'*'", "'/'", "'%'", "'*='", "'/='", 
                     "'%='", "'+='", "'-='", "'mut'", "'let'", "'if'", "'else'", 
                     "'func'", "'impure'", "'return'", "'array'", "'<='", 
                     "'>='", "'<'", "'>'", "'=>'", "'{'", "'}'", "'('", 
                     "')'", "'['", "']'", "'!'", "'='", "'.'", "'new'", 
                     "'default'", null, "','", "';'", "':'", "'true'" ];

var symbolicNames = [ null, "Add", "Sub", "Equal", "NotEqual", "EqualStrict", 
                      "NotEqualStrict", "LogicalAnd", "LogicalOr", "Multiply", 
                      "Divide", "Modulo", "MultiplyAssign", "DivideAssign", 
                      "ModuloAssign", "AddAssign", "SubAssign", "Mut", "Let", 
                      "If", "Else", "Function", "Impure", "Return", "Array", 
                      "LessOrEql", "GreaterOrEql", "Less", "Greater", "ArrowFunctionArrow", 
                      "BlockOpen", "BlockClose", "ParameterListOpen", "ParameterListClose", 
                      "ArrayLiteralOpen", "ArrayLiteralClose", "FreezeMarker", 
                      "Assign", "MemberDot", "New", "Default", "Identifier", 
                      "ParameterSeparator", "Terminator", "PropertyAssignSymbol", 
                      "Boolean", "String", "Number", "Whitespace", "MultiLineComment", 
                      "SingleLineComment" ];

var ruleNames =  [ "source", "statement", "block", "statements", "expressionStatement", 
                   "returnStatement", "variableStatement", "variableDeclaration", 
                   "varModifier", "ifStatement", "ifConditionList", "elseStatement", 
                   "functionDeclaration", "singleExpression", "arrayInitializer", 
                   "defaultArrayInitValue", "arrayInitializerArg", "arrowFunctionArrow", 
                   "arrowFunctionParameters", "parameterListOpen", "parameterListClose", 
                   "arrowFunctionBody", "openBlock", "closeBlock", "aiParameterSeparator", 
                   "expressionSequence", "arrayLiteral", "arrayLiteralOpen", 
                   "arrayLiteralClose", "elementList", "elementListSeparator", 
                   "multiply", "divide", "modulo", "logicalAnd", "logicalOr", 
                   "notEqual", "equalStrict", "notEqualStrict", "assign", 
                   "memberDot", "identifierName", "assignmentOperator", 
                   "multiplyAssign", "divideAssign", "moduloAssign", "addAssign", 
                   "subAssign", "objectLiteral", "propertySeparator", "propertyAssignment", 
                   "freezeMarker", "propertyAssignSymbol", "propertyName", 
                   "equal", "less", "greater", "lessOrEql", "greaterOrEql", 
                   "arguments", "parameterSeparator", "formalParameterList", 
                   "formalParameterArg", "functionBody", "literal", "add", 
                   "sub" ];

function LightParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

LightParser.prototype = Object.create(antlr4.Parser.prototype);
LightParser.prototype.constructor = LightParser;

Object.defineProperty(LightParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

LightParser.EOF = antlr4.Token.EOF;
LightParser.Add = 1;
LightParser.Sub = 2;
LightParser.Equal = 3;
LightParser.NotEqual = 4;
LightParser.EqualStrict = 5;
LightParser.NotEqualStrict = 6;
LightParser.LogicalAnd = 7;
LightParser.LogicalOr = 8;
LightParser.Multiply = 9;
LightParser.Divide = 10;
LightParser.Modulo = 11;
LightParser.MultiplyAssign = 12;
LightParser.DivideAssign = 13;
LightParser.ModuloAssign = 14;
LightParser.AddAssign = 15;
LightParser.SubAssign = 16;
LightParser.Mut = 17;
LightParser.Let = 18;
LightParser.If = 19;
LightParser.Else = 20;
LightParser.Function = 21;
LightParser.Impure = 22;
LightParser.Return = 23;
LightParser.Array = 24;
LightParser.LessOrEql = 25;
LightParser.GreaterOrEql = 26;
LightParser.Less = 27;
LightParser.Greater = 28;
LightParser.ArrowFunctionArrow = 29;
LightParser.BlockOpen = 30;
LightParser.BlockClose = 31;
LightParser.ParameterListOpen = 32;
LightParser.ParameterListClose = 33;
LightParser.ArrayLiteralOpen = 34;
LightParser.ArrayLiteralClose = 35;
LightParser.FreezeMarker = 36;
LightParser.Assign = 37;
LightParser.MemberDot = 38;
LightParser.New = 39;
LightParser.Default = 40;
LightParser.Identifier = 41;
LightParser.ParameterSeparator = 42;
LightParser.Terminator = 43;
LightParser.PropertyAssignSymbol = 44;
LightParser.Boolean = 45;
LightParser.String = 46;
LightParser.Number = 47;
LightParser.Whitespace = 48;
LightParser.MultiLineComment = 49;
LightParser.SingleLineComment = 50;

LightParser.RULE_source = 0;
LightParser.RULE_statement = 1;
LightParser.RULE_block = 2;
LightParser.RULE_statements = 3;
LightParser.RULE_expressionStatement = 4;
LightParser.RULE_returnStatement = 5;
LightParser.RULE_variableStatement = 6;
LightParser.RULE_variableDeclaration = 7;
LightParser.RULE_varModifier = 8;
LightParser.RULE_ifStatement = 9;
LightParser.RULE_ifConditionList = 10;
LightParser.RULE_elseStatement = 11;
LightParser.RULE_functionDeclaration = 12;
LightParser.RULE_singleExpression = 13;
LightParser.RULE_arrayInitializer = 14;
LightParser.RULE_defaultArrayInitValue = 15;
LightParser.RULE_arrayInitializerArg = 16;
LightParser.RULE_arrowFunctionArrow = 17;
LightParser.RULE_arrowFunctionParameters = 18;
LightParser.RULE_parameterListOpen = 19;
LightParser.RULE_parameterListClose = 20;
LightParser.RULE_arrowFunctionBody = 21;
LightParser.RULE_openBlock = 22;
LightParser.RULE_closeBlock = 23;
LightParser.RULE_aiParameterSeparator = 24;
LightParser.RULE_expressionSequence = 25;
LightParser.RULE_arrayLiteral = 26;
LightParser.RULE_arrayLiteralOpen = 27;
LightParser.RULE_arrayLiteralClose = 28;
LightParser.RULE_elementList = 29;
LightParser.RULE_elementListSeparator = 30;
LightParser.RULE_multiply = 31;
LightParser.RULE_divide = 32;
LightParser.RULE_modulo = 33;
LightParser.RULE_logicalAnd = 34;
LightParser.RULE_logicalOr = 35;
LightParser.RULE_notEqual = 36;
LightParser.RULE_equalStrict = 37;
LightParser.RULE_notEqualStrict = 38;
LightParser.RULE_assign = 39;
LightParser.RULE_memberDot = 40;
LightParser.RULE_identifierName = 41;
LightParser.RULE_assignmentOperator = 42;
LightParser.RULE_multiplyAssign = 43;
LightParser.RULE_divideAssign = 44;
LightParser.RULE_moduloAssign = 45;
LightParser.RULE_addAssign = 46;
LightParser.RULE_subAssign = 47;
LightParser.RULE_objectLiteral = 48;
LightParser.RULE_propertySeparator = 49;
LightParser.RULE_propertyAssignment = 50;
LightParser.RULE_freezeMarker = 51;
LightParser.RULE_propertyAssignSymbol = 52;
LightParser.RULE_propertyName = 53;
LightParser.RULE_equal = 54;
LightParser.RULE_less = 55;
LightParser.RULE_greater = 56;
LightParser.RULE_lessOrEql = 57;
LightParser.RULE_greaterOrEql = 58;
LightParser.RULE_arguments = 59;
LightParser.RULE_parameterSeparator = 60;
LightParser.RULE_formalParameterList = 61;
LightParser.RULE_formalParameterArg = 62;
LightParser.RULE_functionBody = 63;
LightParser.RULE_literal = 64;
LightParser.RULE_add = 65;
LightParser.RULE_sub = 66;


function SourceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_source;
    return this;
}

SourceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceContext.prototype.constructor = SourceContext;

SourceContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

SourceContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterSource(this);
	}
};

SourceContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitSource(this);
	}
};




LightParser.SourceContext = SourceContext;

LightParser.prototype.source = function() {

    var localctx = new SourceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LightParser.RULE_source);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 135;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 18)) & ~0x1f) == 0 && ((1 << (_la - 18)) & ((1 << (LightParser.Let - 18)) | (1 << (LightParser.If - 18)) | (1 << (LightParser.Function - 18)) | (1 << (LightParser.Return - 18)) | (1 << (LightParser.Array - 18)) | (1 << (LightParser.BlockOpen - 18)) | (1 << (LightParser.ParameterListOpen - 18)) | (1 << (LightParser.ArrayLiteralOpen - 18)) | (1 << (LightParser.New - 18)) | (1 << (LightParser.Identifier - 18)) | (1 << (LightParser.Boolean - 18)) | (1 << (LightParser.String - 18)) | (1 << (LightParser.Number - 18)))) !== 0)) {
            this.state = 134;
            this.statements();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

StatementContext.prototype.variableStatement = function() {
    return this.getTypedRuleContext(VariableStatementContext,0);
};

StatementContext.prototype.functionDeclaration = function() {
    return this.getTypedRuleContext(FunctionDeclarationContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.expressionStatement = function() {
    return this.getTypedRuleContext(ExpressionStatementContext,0);
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitStatement(this);
	}
};




LightParser.StatementContext = StatementContext;

LightParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, LightParser.RULE_statement);
    try {
        this.state = 143;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 137;
            this.block();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 138;
            this.variableStatement();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 139;
            this.functionDeclaration();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 140;
            this.ifStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 141;
            this.expressionStatement();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 142;
            this.returnStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.BlockOpen = function() {
    return this.getToken(LightParser.BlockOpen, 0);
};

BlockContext.prototype.BlockClose = function() {
    return this.getToken(LightParser.BlockClose, 0);
};

BlockContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitBlock(this);
	}
};




LightParser.BlockContext = BlockContext;

LightParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LightParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 145;
        this.match(LightParser.BlockOpen);
        this.state = 147;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 18)) & ~0x1f) == 0 && ((1 << (_la - 18)) & ((1 << (LightParser.Let - 18)) | (1 << (LightParser.If - 18)) | (1 << (LightParser.Function - 18)) | (1 << (LightParser.Return - 18)) | (1 << (LightParser.Array - 18)) | (1 << (LightParser.BlockOpen - 18)) | (1 << (LightParser.ParameterListOpen - 18)) | (1 << (LightParser.ArrayLiteralOpen - 18)) | (1 << (LightParser.New - 18)) | (1 << (LightParser.Identifier - 18)) | (1 << (LightParser.Boolean - 18)) | (1 << (LightParser.String - 18)) | (1 << (LightParser.Number - 18)))) !== 0)) {
            this.state = 146;
            this.statements();
        }

        this.state = 149;
        this.match(LightParser.BlockClose);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_statements;
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementsContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterStatements(this);
	}
};

StatementsContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitStatements(this);
	}
};




LightParser.StatementsContext = StatementsContext;

LightParser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, LightParser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 152; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 151;
            this.statement();
            this.state = 154; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 18)) & ~0x1f) == 0 && ((1 << (_la - 18)) & ((1 << (LightParser.Let - 18)) | (1 << (LightParser.If - 18)) | (1 << (LightParser.Function - 18)) | (1 << (LightParser.Return - 18)) | (1 << (LightParser.Array - 18)) | (1 << (LightParser.BlockOpen - 18)) | (1 << (LightParser.ParameterListOpen - 18)) | (1 << (LightParser.ArrayLiteralOpen - 18)) | (1 << (LightParser.New - 18)) | (1 << (LightParser.Identifier - 18)) | (1 << (LightParser.Boolean - 18)) | (1 << (LightParser.String - 18)) | (1 << (LightParser.Number - 18)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_expressionStatement;
    return this;
}

ExpressionStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionStatementContext.prototype.constructor = ExpressionStatementContext;

ExpressionStatementContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

ExpressionStatementContext.prototype.Terminator = function() {
    return this.getToken(LightParser.Terminator, 0);
};

ExpressionStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterExpressionStatement(this);
	}
};

ExpressionStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitExpressionStatement(this);
	}
};




LightParser.ExpressionStatementContext = ExpressionStatementContext;

LightParser.prototype.expressionStatement = function() {

    var localctx = new ExpressionStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, LightParser.RULE_expressionStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 156;
        this.singleExpression(0);
        this.state = 157;
        this.match(LightParser.Terminator);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReturnStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_returnStatement;
    return this;
}

ReturnStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnStatementContext.prototype.constructor = ReturnStatementContext;

ReturnStatementContext.prototype.Return = function() {
    return this.getToken(LightParser.Return, 0);
};

ReturnStatementContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

ReturnStatementContext.prototype.Terminator = function() {
    return this.getToken(LightParser.Terminator, 0);
};

ReturnStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterReturnStatement(this);
	}
};

ReturnStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitReturnStatement(this);
	}
};




LightParser.ReturnStatementContext = ReturnStatementContext;

LightParser.prototype.returnStatement = function() {

    var localctx = new ReturnStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, LightParser.RULE_returnStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 159;
        this.match(LightParser.Return);
        this.state = 160;
        this.singleExpression(0);
        this.state = 161;
        this.match(LightParser.Terminator);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_variableStatement;
    return this;
}

VariableStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableStatementContext.prototype.constructor = VariableStatementContext;

VariableStatementContext.prototype.varModifier = function() {
    return this.getTypedRuleContext(VarModifierContext,0);
};

VariableStatementContext.prototype.variableDeclaration = function() {
    return this.getTypedRuleContext(VariableDeclarationContext,0);
};

VariableStatementContext.prototype.Terminator = function() {
    return this.getToken(LightParser.Terminator, 0);
};

VariableStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterVariableStatement(this);
	}
};

VariableStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitVariableStatement(this);
	}
};




LightParser.VariableStatementContext = VariableStatementContext;

LightParser.prototype.variableStatement = function() {

    var localctx = new VariableStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, LightParser.RULE_variableStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 163;
        this.varModifier();
        this.state = 164;
        this.variableDeclaration();
        this.state = 165;
        this.match(LightParser.Terminator);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_variableDeclaration;
    return this;
}

VariableDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclarationContext.prototype.constructor = VariableDeclarationContext;

VariableDeclarationContext.prototype.Identifier = function() {
    return this.getToken(LightParser.Identifier, 0);
};

VariableDeclarationContext.prototype.Assign = function() {
    return this.getToken(LightParser.Assign, 0);
};

VariableDeclarationContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

VariableDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterVariableDeclaration(this);
	}
};

VariableDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitVariableDeclaration(this);
	}
};




LightParser.VariableDeclarationContext = VariableDeclarationContext;

LightParser.prototype.variableDeclaration = function() {

    var localctx = new VariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, LightParser.RULE_variableDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 167;
        this.match(LightParser.Identifier);
        this.state = 170;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===LightParser.Assign) {
            this.state = 168;
            this.match(LightParser.Assign);
            this.state = 169;
            this.singleExpression(0);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarModifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LightParser.RULE_varModifier;
    return this;
}

VarModifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarModifierContext.prototype.constructor = VarModifierContext;

VarModifierContext.prototype.Let = function() {
    return this.getToken(LightParser.Let, 0);
};

VarModifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.enterVarModifier(this);
	}
};

VarModifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof LightListener ) {
        listener.exitVarModifier(this);
	}
};




LightParser.VarModifierContext = VarModifierContext;

LightParser.prototype.varModifier = function() {
